Update uncrustify configuration

--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -3,7 +3,7 @@ using 0.69
 
 # General options
 newlines                        = auto
-input_tab_size                  = 8
+input_tab_size                  = 2
 
 string_escape_char              = 92
 string_escape_char2             = 0
@@ -70,6 +70,7 @@ sp_permit_cpp11_shift           = true
 sp_before_sparen                = remove
 sp_inside_sparen                = force
 sp_after_sparen                 = force
+sp_inside_for                   = force
 sp_sparen_brace                 = force
 sp_special_semi                 = ignore
 sp_before_semi                  = remove
@@ -77,7 +78,7 @@ sp_before_semi_for              = remove
 sp_before_semi_for_empty        = remove
 sp_after_semi                   = add
 sp_after_semi_for               = force
-sp_after_semi_for_empty         = remove
+sp_after_semi_for_empty         = add
 sp_before_square                = remove
 sp_before_squares               = remove
 sp_cpp_before_struct_binding    = add
@@ -100,7 +101,7 @@ sp_after_operator               = remove
 sp_after_operator_sym           = remove
 sp_after_operator_sym_empty     = remove
 sp_after_cast                   = add
-sp_inside_paren_cast            = remove
+sp_inside_paren_cast            = add
 sp_cpp_cast_paren               = remove
 sp_sizeof_paren                 = remove
 sp_sizeof_ellipsis              = remove
@@ -128,6 +129,7 @@ sp_fparen_brace                 = add
 sp_fparen_brace_initializer     = remove
 sp_func_call_paren              = remove
 sp_func_call_paren_empty        = remove
+sp_func_call_user_paren         = remove
 sp_func_class_paren             = remove
 sp_func_class_paren_empty       = remove
 sp_return_paren                 = force
@@ -136,7 +138,7 @@ sp_attribute_paren              = remove
 sp_defined_paren                = remove
 sp_throw_paren                  = force
 sp_after_throw                  = force
-sp_catch_paren                  = force
+sp_catch_paren                  = remove
 sp_macro                        = force
 sp_macro_func                   = force
 sp_else_brace                   = force
@@ -174,8 +176,8 @@ sp_after_new                    = force
 sp_between_new_paren            = force
 sp_after_newop_paren            = force
 sp_inside_newop_paren           = force
-sp_before_tr_emb_cmt            = add
-sp_num_before_tr_emb_cmt        = 1
+sp_before_tr_cmt                = add
+sp_num_before_tr_cmt            = 1
 sp_skip_vbrace_tokens           = false
 sp_after_noexcept               = remove
 
@@ -205,21 +207,21 @@ indent_ctor_init_leading        = 2
 indent_ctor_init                = 0
 indent_else_if                  = false
 indent_var_def_blk              = 0
-indent_var_def_cont             = false
-indent_shift                    = false
+indent_var_def_cont             = true
+indent_shift                    = 0
 indent_func_def_force_col1      = false
-indent_func_call_param          = false
-indent_func_def_param           = false
-indent_func_proto_param         = false
-indent_func_class_param         = false
-indent_func_ctor_var_param      = false
-indent_template_param           = false
+indent_func_call_param          = true
+indent_func_def_param           = true
+indent_func_proto_param         = true
+indent_func_class_param         = true
+indent_func_ctor_var_param      = true
+indent_template_param           = true
 indent_func_param_double        = false
 indent_func_const               = 0
 indent_func_throw               = 0
 indent_member                   = 2
 indent_member_single            = true
-indent_sing_line_comments       = 0
+indent_single_line_comments_before = 0
 indent_relative_single_line_comments = false
 indent_switch_case              = 2
 indent_switch_pp                = true
@@ -230,8 +232,8 @@ indent_label                    = 0
 indent_access_spec              = -2
 indent_access_spec_body         = false
 indent_paren_nl                 = false
-indent_paren_close              = 0
-indent_bool_paren               = false
+indent_paren_close              = 2
+indent_bool_paren               = 0
 indent_square_nl                = false
 indent_align_assign             = true
 indent_align_paren              = true
@@ -245,7 +247,8 @@ indent_single_after_return      = false
 indent_ignore_asm_block         = false
 
 # Newline adding and removing options
-nl_collapse_empty_body          = false
+nl_collapse_empty_body          = true
+nl_collapse_empty_body_functions = true
 nl_assign_leave_one_liners      = true
 nl_class_leave_one_liners       = true
 nl_enum_leave_one_liners        = true
@@ -261,11 +264,11 @@ nl_end_of_file                  = force
 nl_end_of_file_min              = 1
 nl_assign_brace                 = ignore
 nl_tsquare_brace                = remove # ...or ignore
-nl_func_var_def_blk             = 0
+nl_var_def_blk_end_func_top     = 0
 nl_typedef_blk_start            = 0
 nl_typedef_blk_end              = 0
 nl_typedef_blk_in               = 0
-nl_var_def_blk_start            = 2
+nl_var_def_blk_start            = 1
 nl_var_def_blk_end              = 0
 nl_var_def_blk_in               = 0
 nl_fcall_brace                  = force
@@ -297,7 +300,7 @@ nl_brace_while                  = remove # ...or ???
 nl_switch_brace                 = force
 nl_synchronized_brace           = force
 nl_multi_line_cond              = false
-nl_multi_line_define            = false
+nl_multi_line_define            = true
 nl_before_case                  = false
 nl_after_case                   = false
 nl_case_colon_brace             = force
@@ -309,8 +312,8 @@ nl_template_func_def            = force
 nl_template_func_decl           = ignore
 nl_template_var                 = remove
 nl_class_brace                  = force
-nl_class_init_args              = ignore
-nl_constr_init_args             = ignore
+nl_class_init_args              = force
+nl_constr_init_args             = force
 nl_enum_own_lines               = ignore
 nl_func_type_name               = force
 nl_func_type_name_class         = ignore
@@ -322,8 +325,8 @@ nl_func_def_paren               = remove
 nl_func_call_paren              = remove
 nl_func_decl_start              = ignore
 nl_func_def_start               = ignore
-nl_func_decl_start_multi_line   = false
-nl_func_def_start_multi_line    = false
+nl_func_decl_start_multi_line   = true
+nl_func_def_start_multi_line    = true
 nl_func_decl_args               = ignore
 nl_func_def_args                = ignore
 nl_func_decl_args_multi_line    = false
@@ -335,7 +338,7 @@ nl_func_def_end_multi_line      = false
 nl_func_decl_empty              = remove
 nl_func_def_empty               = remove
 nl_func_call_empty              = remove
-nl_func_call_start_multi_line   = false
+nl_func_call_start_multi_line   = true
 nl_func_call_args_multi_line    = false
 nl_func_call_end_multi_line     = false
 nl_fdef_brace                   = force
@@ -352,9 +355,9 @@ nl_after_vbrace_open_empty      = false
 nl_after_brace_close            = true
 nl_after_vbrace_close           = true
 nl_brace_struct_var             = remove
-nl_define_macro                 = false
+nl_define_macro                 = true
 nl_squeeze_paren_close          = true # check me
-nl_squeeze_ifdef                = false
+nl_squeeze_ifdef                = true
 nl_squeeze_ifdef_top_level      = false
 nl_ds_struct_enum_cmt           = false
 nl_ds_struct_enum_close_brace   = false
@@ -414,7 +417,7 @@ pos_class_colon                 = lead
 pos_constr_colon                = lead
 
 # Line Splitting options
-code_width                      = 79
+code_width                      = 80
 ls_for_split_full               = false
 ls_func_split_full              = false
 ls_code_width                   = false
@@ -422,7 +425,7 @@ ls_code_width                   = false
 # Code alignment (not left column spaces/tabs)
 align_keep_tabs                 = false
 align_with_tabs                 = false
-align_on_tabstop                = true
+align_on_tabstop                = false
 align_number_right              = false
 align_keep_extra_space          = false
 align_func_params               = false
@@ -468,7 +471,7 @@ align_mix_var_proto             = false
 align_single_line_func          = false
 align_single_line_brace         = false
 align_single_line_brace_gap     = 0
-align_nl_cont                   = false
+align_nl_cont                   = 1
 align_pp_define_together        = false
 align_pp_define_gap             = 0
 align_pp_define_span            = 0
@@ -476,7 +479,7 @@ align_left_shift                = true
 align_asm_colon                 = false
 
 # Comment modifications
-cmt_width                       = 79
+cmt_width                       = 80
 cmt_reflow_mode                 = 0
 cmt_convert_tab_to_spaces       = true
 cmt_indent_multi                = true
@@ -508,7 +511,9 @@ mod_add_long_switch_closebrace_comment = 0
 mod_add_long_ifdef_endif_comment = 0
 mod_add_long_ifdef_else_comment = 0
 mod_sort_include                = true
+mod_remove_duplicate_include    = true
 mod_move_case_break             = true
+mod_move_case_return            = true
 mod_case_brace                  = ignore
 mod_remove_empty_return         = true
 mod_enum_last_comma             = add
@@ -517,19 +522,20 @@ mod_enum_last_comma             = add
 pp_indent                       = remove
 pp_indent_at_level              = false
 pp_indent_count                 = 0
-pp_space                        = force
-pp_space_count                  = 1
+pp_space_after                  = remove
+pp_space_count                  = 0
 pp_indent_region                = 0
 pp_region_indent_code           = false
 pp_indent_if                    = 0
 pp_if_indent_code               = false
 pp_define_at_level              = false
 pp_ignore_define_body           = false
+pp_multiline_define_body_indent = 0
 # TODO next four default to true, but is that right?
 pp_indent_case                  = true
 pp_indent_func_def              = true
 pp_indent_extern                = true
-pp_indent_brace                 = true
+pp_indent_brace                 = 1
 
 # Use or Do not Use options
 use_indent_func_call_param      = true
@@ -539,3 +545,8 @@ use_options_overriding_for_qt_macros = false
 
 # Project-specific parsing options
 set FUNC_WRAP TEST TEST_F TEST_P TYPED_TEST
+set func_call_user LOG_TRACE
+set func_call_user LOG_INFO
+set func_call_user LOG_DEBUG
+set func_call_user LOG_WARN
+set func_call_user LOG_ERROR
