Bring kwiver/vital/algo/algorithm.[h,cxx]
Taken from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

--- a/vital/CMakeLists.txt
+++ b/vital/CMakeLists.txt
@@ -150,6 +150,9 @@ add_subdirectory( plugin_management )
 # -- Created library "vital_applets"
 add_subdirectory( applets )
 
+# -- Creates library "vital_algo"
+add_subdirectory( algo )
+
 # ==============================================================================
 # Vital Library
 
