Bring video_input dependencies
Brings the following from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

vital/any.h
vital/exceptions.h
vital/vital_types.h
vital/types/color.h
vital/types/geo_point.{cxx,h}
vital/types/image.{cxx,h}
vital/types/image_container.h
vital/types/metadata.{cxx,h}
vital/types/metadata_tags.h
vital/types/metadata_traits.{cxx,h}
vital/types/timestamp.{cxx,h}
vital/types/metadata_map.h
vital/types/video_raw_image.{cxx,h}
vital/types/video_raw_metadata.{cxx,h}
vital/types/video_settings.{cxx,h}
vital/types/video_uninterpreted_data.{cxx,h}
vital/util/visit.h

--- a/vital/types/CMakeLists.txt
+++ b/vital/types/CMakeLists.txt
@@ -6,15 +6,36 @@
 #
 
 set( vital_types_public_headers
+  color.h
   geo_polygon.h
+  geo_point.h
   geodesy.h
+  image.h
+  image_container.h
+  metadata.h
+  metadata_map.h
+  metadata_traits.h
   polygon.h
+  timestamp.h
   vector.h
+  video_raw_image.h
+  video_raw_metadata.h
+  video_settings.h
+  video_uninterpreted_data.h
   )
 set( vital_type_sources
   geo_polygon.cxx
+  geo_point.cxx
   geodesy.cxx
+  image.cxx
+  metadata.cxx
+  metadata_traits.cxx
   polygon.cxx
+  timestamp.cxx
+  video_raw_image.cxx
+  video_raw_metadata.cxx
+  video_settings.cxx
+  video_uninterpreted_data.cxx
   )
 
 kwiver_install_headers(
