--- a/arrows/klv/CMakeLists.txt
+++ b/arrows/klv/CMakeLists.txt
@@ -160,9 +160,9 @@ kwiver_add_plugin( kwiver_algo_klv_plugin
                    SUBDIR           ${kwiver_plugin_algorithm_subdir}
                    )
 
-#if (KWIVER_ENABLE_TOOLS)
-#  add_subdirectory(applets)
-#endif()
+if (KWIVER_ENABLE_TOOLS)
+  add_subdirectory(applets)
+endif()
 
 if (KWIVER_ENABLE_TESTS)
   add_subdirectory( tests )
