Bring test files for vital:config_block_io test
Taken from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

--- a/vital/config/tests/CMakeLists.txt
+++ b/vital/config/tests/CMakeLists.txt
@@ -11,4 +11,4 @@ set( test_libraries vital_config vital_exceptions kwiversys Eigen3::Eigen )
 # Config Tests
 ##############################
 kwiver_discover_gtests(vital config_block    LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital config_block_io LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
+kwiver_discover_gtests(vital config_block_io LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}/config_files/vital")
