cmake: rename vital_algorithms back to vital_algo
this brings the code closer to kwiver v1 and makes bringing code simpler

--- a/arrows/core/CMakeLists.txt
+++ b/arrows/core/CMakeLists.txt
@@ -152,7 +152,7 @@ kwiver_add_library( kwiver_algo_core
   )
 
 target_link_libraries( kwiver_algo_core
-  PUBLIC               vital_algorithms
+  PUBLIC               vital_algo
   PRIVATE              kwiversys
                        vital_config
                        vital_types
@@ -170,6 +170,6 @@ if (KWIVER_ENABLE_TESTS)
   add_subdirectory(tests)
 endif()
 
-if (KWIVER_ENABLE_TOOLS)
-  add_subdirectory(applets)
-endif()
+#if (KWIVER_ENABLE_TOOLS)
+#  add_subdirectory(applets)
+#endif()
