Bring vital/range
Taken from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

--- a/vital/CMakeLists.txt
+++ b/vital/CMakeLists.txt
@@ -388,7 +388,7 @@ add_subdirectory( applets_plugins )
 ####
 ##
 #add_subdirectory( algo )
-#add_subdirectory( range )
+add_subdirectory( range )
 #add_subdirectory( bindings )
 #
 #if (KWIVER_ENABLE_TOOLS)
