Bring vital/types/bounding_box
Taken from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

--- a/vital/types/CMakeLists.txt
+++ b/vital/types/CMakeLists.txt
@@ -6,6 +6,7 @@
 #
 
 set( vital_types_public_headers
+  bounding_box.h
   color.h
   geo_polygon.h
   geo_point.h
@@ -24,6 +25,7 @@ set( vital_types_public_headers
   video_uninterpreted_data.h
   )
 set( vital_type_sources
+  bounding_box.cxx
   geo_polygon.cxx
   geo_point.cxx
   geodesy.cxx
