Bring vital/algo/metadata_filter.{h.cxx}
Taken from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

--- a/vital/algo/CMakeLists.txt
+++ b/vital/algo/CMakeLists.txt
@@ -6,12 +6,14 @@ set(public_headers
    algorithm.h
    algorithm.txx
    image_io.h
+   metadata_filter.h
    video_input.h
   )
 #
 set(source_files
   algorithm.cxx
   image_io.cxx
+  metadata_filter.cxx
   video_input.cxx
   )
 
