Bring buffered_metadata_filter.{cxx,h}
Taken from https://github.com/Kitware/kwiver @7e4920796821476afb9be3b31b23791a1e1e76b6

--- a/vital/algo/CMakeLists.txt
+++ b/vital/algo/CMakeLists.txt
@@ -5,6 +5,7 @@
 set(public_headers
    algorithm.h
    algorithm.txx
+   buffered_metadata_filter.h
    image_io.h
    metadata_filter.h
    video_input.h
@@ -12,6 +13,7 @@ set(public_headers
 #
 set(source_files
   algorithm.cxx
+  buffered_metadata_filter.cxx
   image_io.cxx
   metadata_filter.cxx
   video_input.cxx
