fix missing kwiver::arrows::core::metadata*

--- a/arrows/core/CMakeLists.txt
+++ b/arrows/core/CMakeLists.txt
@@ -42,7 +42,7 @@ set( plugin_core_headers
 #  mesh_intersect.h
 #  mesh_operations.h
   metadata_map_io_csv.h
-#  metadata_stream_from_video.h
+  metadata_stream_from_video.h
 #  read_object_track_set_kw18.h
 #  read_track_descriptor_set_csv.h
 #  render_mesh_depth_map.h
@@ -119,7 +119,7 @@ set( plugin_core_sources
 #  mesh_intersect.cxx
 #  mesh_operations.cxx
   metadata_map_io_csv.cxx
-#  metadata_stream_from_video.cxx
+  metadata_stream_from_video.cxx
 #  read_object_track_set_kw18.cxx
 #  read_track_descriptor_set_csv.cxx
 #  render_mesh_depth_map.cxx
