cmake: Add missing vital/types class

--- a/vital/types/CMakeLists.txt
+++ b/vital/types/CMakeLists.txt
@@ -17,6 +17,7 @@ set( vital_types_public_headers
   metadata_map.h
   metadata_traits.h
   metadata_stream.h
+  metadata_stream_from_map.h
   polygon.h
   timestamp.h
   vector.h
@@ -34,6 +35,7 @@ set( vital_type_sources
   metadata.cxx
   metadata_traits.cxx
   metadata_stream.cxx
+  metadata_stream_from_map.cxx
   polygon.cxx
   timestamp.cxx
   video_raw_image.cxx
