cmake: add missing dependency for ffmpeg test

--- a/arrows/ffmpeg/tests/CMakeLists.txt
+++ b/arrows/ffmpeg/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_FOLDER "Arrows/FFmpeg/Tests")
 
 include(kwiver-test-setup)
 
-set(test_libraries     kwiver_algo_ffmpeg kwiver_algo_core)
+set(test_libraries     vital kwiver_algo_ffmpeg kwiver_algo_core)
 
 ##############################
 # Algorithms ffmpeg tests
