--- a/arrows/core/CMakeLists.txt
+++ b/arrows/core/CMakeLists.txt
@@ -170,6 +170,6 @@ if (KWIVER_ENABLE_TESTS)
   add_subdirectory(tests)
 endif()
 
-#if (KWIVER_ENABLE_TOOLS)
-#  add_subdirectory(applets)
-#endif()
+if (KWIVER_ENABLE_TOOLS)
+  add_subdirectory(applets)
+endif()
