Apply uncrustify to new code

--- a/vital/util/CMakeLists.txt
+++ b/vital/util/CMakeLists.txt
@@ -9,36 +9,51 @@
 ###
 # These headers are installed
 #
+
 set( public_headers
-  get_paths.h
-  timer.h
-  cpu_timer.h
-  wall_timer.h
-  demangle.h
   any_converter.h
-  enumerate_matrix.h
   bounded_buffer.h
-  source_location.h
+  compare.h
+  cpu_timer.h
   data_stream_reader.h
+  demangle.h
+  enumerate_matrix.h
+  file_md5.h
+  get_paths.h
   hex_dump.h
-  string.h
-  string_editor.h
+  interval.h
+  interval_map.h
   simple_stats.h
+  singleton.h
+  source_location.h
+  string_editor.h
+  string_encoding.h
+  string.h
+  text_codec_ascii.h
+  text_codec_endian.h
+  text_codec_error_policies.h
+  text_codec.h
+  text_codec_transcode.h
+  text_codec_utf_16.h
+  text_codec_utf_8.h
   thread_pool.h
-  token_expander.h
+  timer.h
   token_expand_editor.h
+  token_expander.h
+  tokenize.h
   token_type_env.h
   token_type.h
   token_type_symtab.h
   token_type_sysenv.h
-  tokenize.h
   transform_image.h
+  visit.h
+  wall_timer.h
   wrap_text_block.h
-  file_md5.h
   )
 
 # ----------------------
 set( private_headers
+  text_codec_priv.h
   thread_pool_builtin_backend.h
   thread_pool_gcd_backend.h
   thread_pool_sync_backend.h
@@ -46,23 +61,30 @@ set( private_headers
 
 # ----------------------
 set( sources
-  get_paths.cxx
   demangle.cxx
+  get_paths.cxx
   source_location.cxx
 
   data_stream_reader.cxx
+  file_md5.cxx
   hex_dump.cxx
   string.cxx
   string_editor.cxx
+  string_encoding.cxx
+  text_codec_ascii.cxx
+  text_codec.cxx
+  text_codec_error_policies.cxx
+  text_codec_transcode.cxx
+  text_codec_utf_16.cxx
+  text_codec_utf_8.cxx
   thread_pool.cxx
-  token_expander.cxx
   token_expand_editor.cxx
+  token_expander.cxx
   token_type.cxx
   token_type_env.cxx
   token_type_symtab.cxx
   token_type_sysenv.cxx
   wrap_text_block.cxx
-  file_md5.cxx
   )
 
 kwiver_install_headers(
